Table modules {
  module_id integer [pk]
  module_id_uni varchar
  name varchar [not null]
  org_id varchar [not null, ref: > organisations.org_id]
  level varchar
  lang varchar
  ects integer
  prereq varchar
  description varchar
  valid_from varchar
  valid_to varchar
  link varchar
  link_type varchar
  digital_score int
  indexes {
    (module_id_uni) [unique]
    (org_id)
    (level, lang, ects, digital_score)
  }
}

Table topics {
  topic_id integer [pk]
  topic varchar [not null]
  embedding blob
  indexes {
    (topic)
  }
}

Table organisations {
  org_id varchar [pk]
  name varchar [not null]
  org_type varchar
  parent_org_id varchar [ref: > organisations.org_id]
  dep_id varchar [ref: > organisations.org_id]
  school_id varchar [ref: > organisations.org_id]
  link varchar
  homepage varchar
  org_id_tumonline int
  hierarchy int
  indexes {
    (dep_id)
    (school_id)
  }
}

Table module_topic_mappings {
  module_id integer [ref: > modules.module_id]
  topic_id integer [ref: > topics.topic_id]
  indexes {
    (module_id, topic_id)
  }
}

Table module_prerequisite_mappings {
  module_prerequisite_mapping_id integer [pk, increment]
  module_id_uni varchar [not null, ref: > modules.module_id_uni]
  prereq_module_id_uni varchar [not null, ref: > modules.module_id_uni]
  extracted_module_identifier_id integer [not null, ref: > extracted_module_identifiers.extracted_module_identifier_id]
  score float
  indexes {
    (module_id_uni, prereq_module_id_uni, extracted_module_identifier_id) [unique]
    (module_id_uni, prereq_module_id_uni)
  }
}

Table extracted_module_identifiers {
  extracted_module_identifier_id integer [pk, increment]
  module_id_uni varchar [not null, ref: > modules.module_id_uni]
  identifier varchar [not null]
  identifier_type varchar [not null]
  indexes {
    (module_id_uni, identifier, identifier_type) [unique]
  }
}
